# 256-Point-FFT-on-FPGA-with-HDMI

./: readme.md  vivado.jou  vivado_pid12908.str  zed_hdmi.xpr
ALL_VERILOG_CODES/: fft_ver2.v  sample_ram_rtl.v  sampler.v  twiddle_rom_256.v
vitis/: .analytics
vitis/.metadata/: version.ini
vitis/Hdmi_zed/: .cproject  .project
vitis/Hdmi_zed_system/: .cproject  .project
vitis/Vdma_test/: .cproject  .project  platform.spr  platform.tcl
zed_hdmi.cache/sim/: ssm.db
zed_hdmi.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  project.wpc  synthesis.wdf  webtalk_pa.xml
zed_hdmi.hw/backup/: hw_ila_data_1.ila
zed_hdmi.hw/hw_1/: hw.xml
zed_hdmi.runs/.jobs/: vrs_config_1.xml  vrs_config_10.xml  vrs_config_11.xml  vrs_config_12.xml  vrs_config_17.xml  vrs_config_2.xml  vrs_config_35.xml  vrs_config_4.xml  vrs_config_5.xml  vrs_config_6.xml  vrs_config_7.xml
zed_hdmi.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  clockInfo.txt  design_1_wrapper.ltx  design_1_wrapper.tcl  design_1_wrapper.vdi  design_1_wrapper_bd.bmm  design_1_wrapper_bus_skew_routed.pb  design_1_wrapper_bus_skew_routed.rpt  design_1_wrapper_bus_skew_routed.rpx  design_1_wrapper_clock_utilization_routed.rpt  design_1_wrapper_control_sets_placed.rpt  design_1_wrapper_drc_opted.rpt  design_1_wrapper_drc_opted.rpx  design_1_wrapper_drc_routed.pb  design_1_wrapper_drc_routed.rpt  design_1_wrapper_drc_routed.rpx  design_1_wrapper_io_placed.rpt  (+22 more)
zed_hdmi.runs/synth_1/prj/sol/.autopilot/db/driver/src/: CMakeLists.txt
zed_hdmi.sdk/: design_1_wrapper.hdf
zed_hdmi_sw/: .analytics
(+912 files in other folders)
